--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 # Jekyll configuration
 
-name: My blog
-description: A jekyll theme
+name: Scikit-learn Enhancement Proposals
 
 # url is currently only used only for the RSS feed in feed.xml
 #url: https://scotte.github.io/jekyll-clean
